# arcenesis-magnit-uplift

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yaml  pyproject.toml
artifacts/: predictions.csv
scripts/: test_pipeline.py
src/: config.py  models.py  predict.py  train.py  validation.py
