[project]
name = "arcenesis-magnit-uplift"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "scikit-uplift>=0.5.1",
    "numpy>=1.24,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
